objects/ASI_CRM_PromoterPlacement__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Branch__c</fullName>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>ASI_TH_CRM_Contract__c</referenceTo>
        <relationshipLabel>Promoter Placements</relationshipLabel>
        <relationshipName>Promoter_Placements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_DailySalary__c</fullName>
        <label>Daily Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Exclude__c</fullName>
        <description>Exclude in Report or Calculation</description>
        <formula>AND (
 ISBLANK(ASI_CRM_DailySalary__c),
 ISBLANK(ASI_CRM_WorkingDay__c),
 ISBLANK(ASI_CRM_PromoterCount__c),
 ISBLANK(ASI_CRM_WorkingMonth__c)
)</formula>
        <label>Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_IGC__c</fullName>
        <label>IGC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDECOA__c</fullName>
        <label>JDE COA</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PackFactor__c</fullName>
        <formula>ASI_CRM_SKU__r.ASI_HK_CRM_Pack_Factor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pack Factor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Product__c</fullName>
        <formula>ASI_CRM_SKU__r.Name</formula>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PromoterCount__c</fullName>
        <label>Promoter Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKUCode__c</fullName>
        <formula>ASI_CRM_SKU__r.ASI_MFM_SKU_Code__c</formula>
        <label>SKU Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>Promoter Placements</relationshipLabel>
        <relationshipName>Promoter_Placements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SetupCode__c</fullName>
        <label>Setup Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TotalFx__c</fullName>
        <formula>ASI_CRM_PromoterCount__c * ASI_CRM_WorkingDay__c * ASI_CRM_DailySalary__c * ASI_CRM_WorkingMonth__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_WSSP__c</fullName>
        <label>Wholesaler Selling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_WorkingDay__c</fullName>
        <label>Working Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_WorkingMonth__c</fullName>
        <label>Working Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Promoter Placement</label>
    <nameField>
        <displayFormat>PP-{00000000}</displayFormat>
        <label>Promoter Placement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promoter Placements</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_MY_PromoterPlacement</fullName>
        <active>true</active>
        <label>Promoter Placement (MY)</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>